Фиксация результата 4